# spread-analytics-app

./: .gitignore  pyproject.toml  requirements.txt
app/: README.md
app/frontend/: streamlit_app.py
spread_analytics/: __init__.py  data.py
